Added bb84 algorithm

--- a/aes-128bit/aes-128bits.ipynb
+++ b/aes-128bit/aes-128bits.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,10 +44,11 @@
     "    [0x17, 0x2B, 0x04, 0x7E, 0xBA, 0x77, 0xD6, 0x26, 0xE1, 0x69, 0x14, 0x63, 0x55, 0x21, 0x0C, 0x7D]\n",
     "]\n",
     "\n",
-    "AES_RCON = [[\"01\", \"02\", \"04\", \"08\", \"10\", \"20\", \"40\", \"80\", \"1b\", \"36\"],\n",
-    "        [\"00\", \"00\", \"00\", \"00\", \"00\", \"00\", \"00\", \"00\", \"00\", \"00\"],\n",
-    "        [\"00\", \"00\", \"00\", \"00\", \"00\", \"00\", \"00\", \"00\", \"00\", \"00\"],\n",
-    "        [\"00\", \"00\", \"00\", \"00\", \"00\", \"00\", \"00\", \"00\", \"00\", \"00\"]\n",
+    "AES_RCON = [\n",
+    "    [\"01\", \"02\", \"04\", \"08\", \"10\", \"20\", \"40\", \"80\", \"1b\", \"36\"],\n",
+    "    [\"00\", \"00\", \"00\", \"00\", \"00\", \"00\", \"00\", \"00\", \"00\", \"00\"],\n",
+    "    [\"00\", \"00\", \"00\", \"00\", \"00\", \"00\", \"00\", \"00\", \"00\", \"00\"],\n",
+    "    [\"00\", \"00\", \"00\", \"00\", \"00\", \"00\", \"00\", \"00\", \"00\", \"00\"]\n",
     "]\n",
     "\n",
     "\n",
@@ -149,18 +150,22 @@
     "def GetMixColumns(ShiftRowsMatrix):\n",
     "    fixed = [2, 1, 1, 3]\n",
     "    row = [0, 3, 2, 1]\n",
-    "    coloumn = 0\n",
+    "    column = 0\n",
     "    OutputArray = []\n",
     "    for _ in range(4):\n",
     "        for _ in range(4):\n",
-    "            OutputArray.append('%02x' % (GaloisNumber(int(ShiftRowsMatrix[row[0]][coloumn], 16), fixed[0]) ^GaloisNumber(int(ShiftRowsMatrix[row[1]][coloumn], 16), fixed[1]) ^ GaloisNumber(int(ShiftRowsMatrix[row[2]][coloumn], 16), fixed[2]) ^GaloisNumber(int(ShiftRowsMatrix[row[3]][coloumn], 16), fixed[3])))\n",
+    "            OutputArray.append('%02x' % (GaloisNumber(int(ShiftRowsMatrix[row[0]][column], 16),\n",
+    "                        fixed[0]) ^GaloisNumber(int(ShiftRowsMatrix[row[1]][column], 16),\n",
+    "                        fixed[1]) ^ GaloisNumber(int(ShiftRowsMatrix[row[2]][column], 16),\n",
+    "                        fixed[2]) ^GaloisNumber(int(ShiftRowsMatrix[row[3]][column], 16),\n",
+    "                        fixed[3])))\n",
     "            row = [row[-1]] + row[:-1]\n",
-    "        coloumn += 1\n",
+    "        column += 1\n",
     "    ShiftRowsMatrix = [OutputArray[i:i+4] for i in range(0, 16, 4) ]\n",
     "    MixColoumnsMatrix=[[\"0\" for x in range(4)] for y in range(4)] \n",
     "    for i in range(4):\n",
     "        for j in range(4):\n",
-    "            MixColoumnsMatrix[i][j]=ShiftRowsMatrix[j][i]\n",
+    "            MixColoumnsMatrix[i][j] = ShiftRowsMatrix[j][i]\n",
     "    return MixColoumnsMatrix \n",
     "\n",
     "\"\"\"\n",
@@ -169,13 +174,17 @@
     "def GetInverseMixColumns(ShiftRowsMatrix):\n",
     "    fixed = [14, 9, 13, 11]\n",
     "    row = [0, 3, 2, 1]\n",
-    "    coloumn = 0\n",
+    "    column = 0\n",
     "    OutputArray = []\n",
     "    for _ in range(4):\n",
     "        for _ in range(4):\n",
-    "            OutputArray.append('%02x' % (GaloisNumber(int(ShiftRowsMatrix[row[0]][coloumn], 16), fixed[0]) ^GaloisNumber(int(ShiftRowsMatrix[row[1]][coloumn], 16), fixed[1]) ^ GaloisNumber(int(ShiftRowsMatrix[row[2]][coloumn], 16), fixed[2]) ^GaloisNumber(int(ShiftRowsMatrix[row[3]][coloumn], 16), fixed[3])))\n",
+    "            OutputArray.append('%02x' % (GaloisNumber(int(ShiftRowsMatrix[row[0]][column], 16),\n",
+    "                        fixed[0]) ^GaloisNumber(int(ShiftRowsMatrix[row[1]][column], 16),\n",
+    "                        fixed[1]) ^ GaloisNumber(int(ShiftRowsMatrix[row[2]][column], 16),\n",
+    "                        fixed[2]) ^GaloisNumber(int(ShiftRowsMatrix[row[3]][column], 16),\n",
+    "                        fixed[3])))\n",
     "            row = [row[-1]] + row[:-1]\n",
-    "        coloumn += 1\n",
+    "        column += 1\n",
     "    ShiftRowsMatrix = [OutputArray[i:i+4] for i in range(0, 16, 4) ]\n",
     "    InverseMixColoumnsMatrix=[[\"0\" for x in range(4)] for y in range(4)] \n",
     "    for i in range(4):\n",
@@ -218,7 +227,6 @@
     "        for i in range(4):\n",
     "            for j in range(4):\n",
     "                RoundKey[i][j]=Result[j][i]\n",
-    "        \n",
     "        Keys.append(RoundKey)\n",
     "    \n",
     "    return Keys\n",
@@ -234,6 +242,9 @@
     "            RoundKey[j][i]=hex(int(StateMatrix[j][i],16) ^ int(KeyMatrix[j][i],16))\n",
     "    return RoundKey  \n",
     "\n",
+    "\"\"\"\n",
+    "Get the plain text from state matrix\n",
+    "\"\"\"\n",
     "def GetPlainTextMatrix(FinalMatrix):\n",
     "    PlainText=\"\"\n",
     "    for i in range(4):\n",
@@ -241,8 +252,326 @@
     "            if len(FinalMatrix[j][i])==3:\n",
     "                PlainText+='0' \n",
     "            PlainText+=FinalMatrix[j][i][2:]   \n",
-    "    return PlainText \n",
+    "    return PlainText"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## AES Encryption & Decryption in a walkthrough"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 195,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "127"
+      ]
+     },
+     "execution_count": 195,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import binascii\n",
     "\n",
+    "PlainText = \"54686973206973206a75737420616e20\"\n",
+    "Key = \"54686973206973206120736563726574\"\n",
+    "\n",
+    "bin_string = ''.join(format(ord(i), 'b') for i in str(binascii.unhexlify(PlainText)))\n",
+    "\n",
+    "len(bin_string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 196,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['54', '20', '6a', '20'],\n",
+       " ['68', '69', '75', '61'],\n",
+       " ['69', '73', '73', '6e'],\n",
+       " ['73', '20', '74', '20']]"
+      ]
+     },
+     "execution_count": 196,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "StateMatrix = GetStateMatrix(PlainText)\n",
+    "StateMatrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 197,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['54', '20', '61', '63'],\n",
+       " ['68', '69', '20', '72'],\n",
+       " ['69', '73', '73', '65'],\n",
+       " ['73', '20', '65', '74']]"
+      ]
+     },
+     "execution_count": 197,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "KeyMatrix = GetStateMatrix(Key)\n",
+    "KeyMatrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 198,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['0x0', '0x0', '0xb', '0x43'],\n",
+       " ['0x0', '0x0', '0x55', '0x13'],\n",
+       " ['0x0', '0x0', '0x0', '0xb'],\n",
+       " ['0x0', '0x0', '0x11', '0x54']]"
+      ]
+     },
+     "execution_count": 198,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "RoundKeyMatrix= AddRoundKey(StateMatrix,KeyMatrix)\n",
+    "RoundKeyMatrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 199,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[['0x15', '0x35', '0x54', '0x37'],\n",
+       "  ['0x25', '0x4c', '0x6c', '0x1e'],\n",
+       "  ['0xfb', '0x88', '0xfb', '0x9e'],\n",
+       "  ['0x88', '0xa8', '0xcd', '0xb9']],\n",
+       " [['0x65', '0x50', '0x4', '0x33'],\n",
+       "  ['0x2e', '0x62', '0xe', '0x10'],\n",
+       "  ['0xad', '0x25', '0xde', '0x40'],\n",
+       "  ['0x12', '0xba', '0x77', '0xce']],\n",
+       " [['0xab', '0xfb', '0xff', '0xcc'],\n",
+       "  ['0x27', '0x45', '0x4b', '0x5b'],\n",
+       "  ['0x26', '0x3', '0xdd', '0x9d'],\n",
+       "  ['0xd1', '0x6b', '0x1c', '0xd2']],\n",
+       " [['0x9a', '0x61', '0x9e', '0x52'],\n",
+       "  ['0x79', '0x3c', '0x77', '0x2c'],\n",
+       "  ['0x93', '0x90', '0x4d', '0xd0'],\n",
+       "  ['0x9a', '0xf1', '0xed', '0x3f']],\n",
+       " [['0xfb', '0x9a', '0x4', '0x56'],\n",
+       "  ['0x9', '0x35', '0x42', '0x6e'],\n",
+       "  ['0xe6', '0x76', '0x3b', '0xeb'],\n",
+       "  ['0x9a', '0x6b', '0x86', '0xb9']],\n",
+       " [['0x44', '0xde', '0xda', '0x8c'],\n",
+       "  ['0xe0', '0xd5', '0x97', '0xf9'],\n",
+       "  ['0xb0', '0xc6', '0xfd', '0x16'],\n",
+       "  ['0x2b', '0x40', '0xc6', '0x7f']],\n",
+       " [['0x9d', '0x43', '0x99', '0x15'],\n",
+       "  ['0xa7', '0x72', '0xe5', '0x1c'],\n",
+       "  ['0x62', '0xa4', '0x59', '0x4f'],\n",
+       "  ['0x4f', '0xf', '0xc9', '0xb6']],\n",
+       " [['0x81', '0xc2', '0x5b', '0x4e'],\n",
+       "  ['0x23', '0x51', '0xb4', '0xa8'],\n",
+       "  ['0x2c', '0x88', '0xd1', '0x9e'],\n",
+       "  ['0x16', '0x19', '0xd0', '0x66']],\n",
+       " [['0x58', '0x9a', '0xc1', '0x8f'],\n",
+       "  ['0x28', '0x79', '0xcd', '0x65'],\n",
+       "  ['0x1f', '0x97', '0x46', '0xd8'],\n",
+       "  ['0x39', '0x20', '0xf0', '0x96']],\n",
+       " [['0x23', '0xb9', '0x78', '0xf7'],\n",
+       "  ['0x49', '0x30', '0xfd', '0x98'],\n",
+       "  ['0x8f', '0x18', '0x5e', '0x86'],\n",
+       "  ['0x4a', '0x6a', '0x9a', '0xc']]]"
+      ]
+     },
+     "execution_count": 199,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "KeyList = KeySchedule(KeyMatrix)\n",
+    "KeyList"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 200,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# For first 9 rounds\n",
+    "for i in range(9):\n",
+    "    SubBytesMatrix = GetSubBytes(RoundKeyMatrix)\n",
+    "    ShiftRowsMatrix = GetShiftRows(SubBytesMatrix)\n",
+    "    MixColoumnsMatrix = GetMixColumns(ShiftRowsMatrix)\n",
+    "    RoundKeyMatrix = AddRoundKey(MixColoumnsMatrix,KeyList[i])\n",
+    "\n",
+    "# for last round\n",
+    "SubBytesMatrix = GetSubBytes(RoundKeyMatrix) \n",
+    "ShiftRowsMatrix =GetShiftRows(SubBytesMatrix)\n",
+    "RoundKeyMatrix = AddRoundKey(ShiftRowsMatrix,KeyList[9])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 201,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'5a59bce6dc32c05d543970eca18ee097'"
+      ]
+     },
+     "execution_count": 201,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "CipherText = GetPlainTextMatrix(RoundKeyMatrix)\n",
+    "CipherText"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 202,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "StateMatrix=GetStateMatrix(CipherText)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['0x79', '0x65', '0x2c', '0x56'],\n",
+       " ['0x10', '0x2', '0xc4', '0x16'],\n",
+       " ['0x33', '0xd8', '0x2e', '0x66'],\n",
+       " ['0xac', '0x37', '0x76', '0x9b']]"
+      ]
+     },
+     "execution_count": 203,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "RoundKeyMatrix = AddRoundKey(StateMatrix,KeyList[-1])\n",
+    "RoundKeyMatrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "index=8\n",
+    "for i in range(9):\n",
+    "    if i == 0:\n",
+    "        InverseShiftRowsMatrix = GetInverseShiftRows(RoundKeyMatrix)\n",
+    "    else:\n",
+    "        InverseShiftRowsMatrix = GetInverseShiftRows(InverseKeyMixColumnsMatrix)\n",
+    "\n",
+    "    InverseSubBytesMatrix = GetInverseSubBytes(InverseShiftRowsMatrix)\n",
+    "    RoundKeyMatrix = AddRoundKey(InverseSubBytesMatrix,KeyList[index])\n",
+    "    InverseKeyMixColumnsMatrix = GetInverseMixColumns(RoundKeyMatrix)\n",
+    "    index -= 1\n",
+    "\n",
+    "InverseShiftRowsMatrix = GetInverseShiftRows(InverseKeyMixColumnsMatrix)\n",
+    "InverseSubBytesMatrix = GetInverseSubBytes(InverseShiftRowsMatrix) \n",
+    "\n",
+    "RoundKeyMatrix = AddRoundKey(InverseSubBytesMatrix,KeyMatrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 205,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'54686973206973206a75737420616e20'"
+      ]
+     },
+     "execution_count": 205,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "PlainText2 = GetPlainTextMatrix(RoundKeyMatrix)\n",
+    "PlainText2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 206,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 206,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "PlainText == PlainText2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## AES Encryption & Decryption in a block"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 207,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\"\"\"\n",
     "Encrypt block of plain text\n",
     "\"\"\"\n",
@@ -297,15 +626,10 @@
     "    RoundKeyMatrix=AddRoundKey(InverseSubBytesMatrix,KeyMatrix)\n",
     "    PlainText=GetPlainTextMatrix(RoundKeyMatrix)\n",
     "    \n",
-    "    return PlainText"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return PlainText\n",
+    "\n",
+    "\n",
+    "\n",
     "\"\"\"\n",
     "Encrypt plain text and return cipher text\n",
     "\"\"\"\n",
@@ -354,24 +678,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Plain Text: This is just an example of plain text\n",
-      "Key: This is a secret key\n",
-      "Cipher Text: 5a59bce6dc32c05d543970eca18ee0973c11c6546b89fbf8d6a9fc944dbb81e923d1e001cf5655116b7adc09e596e289\n",
-      "Plain Text: This is just an example of plain text\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\n"
+      "Plain Text: This is a random long plain text.\n",
+      "Key: Super secret key\n",
+      "Cipher Text: 669b22974f47016cc3fc774c693d726507f1f34591fdbf9d1d34626c517c97815f85faf41f5091c5688b72193bf82d33\n",
+      "Plain Text: This is a random long plain text.\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\n"
      ]
     }
    ],
    "source": [
     "\n",
-    "PlainText=\"This is just an example of plain text\"\n",
-    "Key=\"This is a secret key\"\n",
+    "PlainText=\"This is a random long plain text.\"\n",
+    "Key=\"Super secret key\"\n",
     "\n",
     "\n",
     "ct = EncryptText(Key, PlainText)\n",
